# Goldeneye

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: spec.md
goldeneye/: __init__.py  main.py
goldeneye/core/: config.py  events.py  exceptions.py  logging.py
goldeneye/models/: bar.py  order.py  portfolio.py  position.py  quote.py  strategy.py
goldeneye/services/backtest/: engine.py
goldeneye/services/broker/: __init__.py  alpaca.py  base.py
goldeneye/services/data/: feed.py  historical.py  symbols.py
goldeneye/viewmodels/: backtest_vm.py  chart_vm.py  main_vm.py  orders_vm.py  portfolio_vm.py  top100_vm.py
goldeneye/views/: main_window.py
goldeneye/views/panels/: backtest_panel.py  chart_panel.py  multi_chart_panel.py  order_panel.py  portfolio_panel.py  top100_panel.py  watchlist_panel.py
tests/unit/models/: test_position.py  test_quote.py
tests/unit/services/: test_backtest_engine.py
