[project]
name = "goldeneye"
version = "0.1.0"
description = "A professional stock trading application"
authors = [
    {name = "Benjamin-Friess",email = "benjamin@goldeneye.app"}
]
requires-python = "^3.11"
dependencies = [
    "pyqt6 (>=6.10.2,<7.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)",
    "alpaca-py (>=0.43.2,<0.44.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytz (>=2026.1.post1,<2027.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-qt (>=4.5.0,<5.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.poetry.scripts]
goldeneye = "goldeneye.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
